
Mantle Universal Service Library 1.1.1 is a patch new feature and bug fix
release. This release is based on Moqui Framework ???, mantle-udm ???.

New Features

- GL Account posted summary values on GlAccountOrganization and
  GlAccountOrgTimePeriod are no longer set on the fly by default and are
  instead populated by a scheduled job (recalculate#GlAccountOrgSummaries)

Bug Fixes

- Fixed issue in OrderServices.create#Order when no user logged in (#51)

===========================================================================
Release 1.1.0 - 24 Nov 2016
===========================================================================

Mantle Universal Service Library 1.1.0 is a minor new feature and bug fix
release. This release is based on Moqui Framework 2.0.0, mantle-udm 1.1.0.

This release includes many small improvements for more complete business
process handling. It also includes various updates for new features and
improvements in Moqui Framework plus refinements based on load testing.

New Features

- Now uses java.time classes in Java 8 instead of Joda Time
- Various concurrency improvements with record locking (for-update query)
  to ensure consistent calculations and updates, especially high
  contention operations like Asset reservation and issuance
- More and safer use of the Moqui TransactionCache using new features
- Updated services in InventoryReportServices.xml to use new location for
  the search#CountBySource service in the moqui-elasticsearch component;
  note that this component is not needed for mantle-usl in general and is
  not a dependency, but is needed for these services
- Updated InventoryReportServices (get#InventoryProjectedInfo,
  get#PriceHistoryInfo) for ElasticSearch 5.0.0 now in moqui-elasticsearch
- Financial TimePeriod close now updated beginning and ending balances on
  all existing subsequent time periods
- On AcctgTrans (GL) posting beginning and ending balances for future
  existing time periods now updated