@@ -51,6 +51,9 @@ along with this software (see the LICENSE.md file). If not, see
     <userPermissions userPermissionId="FISCAL_REOPEN" description="Fiscal Period Reopen"/>
     <userGroupPermissions userGroupId="ADMIN" userPermissionId="FISCAL_REOPEN" fromDate="0"/>
 
+    <userPermissions userPermissionId="TIME_ENTRY_RATE" description="Time Entry Rate Override"/>
+    <userGroupPermissions userGroupId="ADMIN" userPermissionId="TIME_ENTRY_RATE" fromDate="0"/>
+
     <!-- Configuration for Internal Financial Account Payment Processing -->
     <moqui.basic.Enumeration description="Financial Account" enumId="PgtFinancialAccount" enumTypeId="PaymentGatewayType"/>
     <mantle.account.method.PaymentGatewayConfig paymentGatewayConfigId="FinancialAccountLocal"
