@@ -15,23 +15,16 @@ along with this software (see the LICENSE.md file). If not, see
 <services xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://moqui.org/xsd/service-definition-2.0.xsd">
 
     <service verb="update" noun="RateAmount">
-        <description>RateAmount is immutable (expire only), so creates a new record and expire the current one.</description>
+        <description>Limited update of RateAmount record</description>
         <in-parameters>
-            <auto-parameters entity-name="mantle.humanres.rate.RateAmount" include="nonpk"/>
             <parameter name="rateAmountId" required="true"/>
+            <parameter name="fromDate" type="Timestamp"/>
+            <parameter name="thruDate" type="Timestamp"/>
+            <parameter name="rateAmount" type="BigDecimal"/>
         </in-parameters>
         <out-parameters><parameter name="rateAmountId"/></out-parameters>
         <actions>
-            <entity-find-one entity-name="mantle.humanres.rate.RateAmount" value-field="oldRateAmount"/>
-            <entity-make-value entity-name="mantle.humanres.rate.RateAmount" value-field="newRateAmount" map="oldRateAmount"/>
-
-            <set field="oldRateAmount.thruDate" from="ec.user.nowTimestamp"/>
-            <entity-update value-field="oldRateAmount"/>
-            
-            <entity-set value-field="newRateAmount" map="context" set-if-empty="true"/>
-            <entity-sequenced-id-primary value-field="newRateAmount"/>
-            <set field="rateAmountId" from="newRateAmount.rateAmountId"/>
-            <entity-create value-field="newRateAmount"/>
+            <service-call name="update#mantle.humanres.rate.RateAmount" in-map="context" out-map="context"/>
         </actions>
     </service>
 </services>
