@@ -160,6 +160,16 @@ along with this software (see the LICENSE.md file). If not, see
                     <else><set field="pieceRateTypeEnumId" value="RatpPiece"/></else></if>
             </if>
 
+            <set field="hasModifiedRates" value="N"/>
+            <if condition="ec.user.hasPermission('TIME_ENTRY_RATE')"><then>
+                <if condition="clientHourRate != null || vendorHourRate != null || clientPieceRate != null || vendorPieceRate != null">
+                    <set field="hasModifiedRates" value="Y"/></if>
+            </then><else>
+                <!-- will be set in TimeServices.get#TimeEntryRate -->
+                <set field="clientHourRate" from="null"/><set field="vendorHourRate" from="null"/>
+                <set field="clientPieceRate" from="null"/><set field="vendorPieceRate" from="null"/>
+            </else></if>
+
             <service-call name="store#mantle.work.time.TimeEntry" out-map="context" in-map="context"/>
             <service-call name="mantle.work.TimeServices.get#TimeEntryRate" out-map="context" in-map="context"/>
         </actions>
@@ -326,54 +336,64 @@ along with this software (see the LICENSE.md file). If not, see
             <set field="pieceCount" from="timeEntry.pieceCount ?: 0.0"/>
 
             <if condition="hours"><then>
-                <set field="rateAmountId" from="ratePurposeEnumId == 'RaprVendor' ? timeEntry.vendorRateAmountId : timeEntry.rateAmountId"/>
-                <if condition="rateAmountId"><then>
-                    <entity-find-one entity-name="mantle.humanres.rate.RateAmount" value-field="rateAmount" cache="true">
-                        <field-map field-name="rateAmountId"/></entity-find-one>
-                </then><else>
-                    <service-call name="mantle.work.TimeServices.get#TimeEntryRate" out-map="getTerOut" in-map="[timeEntryId:timeEntryId]"/>
-                    <!-- set the values in the timeEntry record for use below since the service updates the DB record and we don't want to re-query to get it -->
-                    <set field="timeEntry.rateAmountId" from="getTerOut.rateAmountId"/>
-                    <set field="timeEntry.vendorRateAmountId" from="getTerOut.vendorRateAmountId"/>
+                <set field="hourlyAmount" from="ratePurposeEnumId == 'RaprVendor' ? timeEntry.vendorHourRate : timeEntry.clientHourRate"/>
+                <if condition="hourlyAmount == null"><then>
+                    <set field="rateAmountId" from="ratePurposeEnumId == 'RaprVendor' ? timeEntry.vendorRateAmountId : timeEntry.rateAmountId"/>
+                    <if condition="rateAmountId"><then>
+                        <entity-find-one entity-name="mantle.humanres.rate.RateAmount" value-field="rateAmount" cache="true">
+                            <field-map field-name="rateAmountId"/></entity-find-one>
+                    </then><else>
+                        <service-call name="mantle.work.TimeServices.get#TimeEntryRate" out-map="getTerOut" in-map="[timeEntryId:timeEntryId]"/>
+                        <!-- set the values in the timeEntry record for use below since the service updates the DB record and we don't want to re-query to get it -->
+                        <set field="timeEntry.rateAmountId" from="getTerOut.rateAmountId"/>
+                        <set field="timeEntry.vendorRateAmountId" from="getTerOut.vendorRateAmountId"/>
 
-                    <set field="rateAmountId" from="ratePurposeEnumId == 'RaprVendor' ? getTerOut.vendorRateAmountId : getTerOut.rateAmountId"/>
-                    <entity-find-one entity-name="mantle.humanres.rate.RateAmount" value-field="rateAmount" cache="true">
-                        <field-map field-name="rateAmountId"/></entity-find-one>
-                </else></if>
-                <if condition="rateAmount"><then>
-                    <set field="hourlyAmount" from="rateAmount.rateAmount"/>
-                    <set field="hourlyAmountTotal" from="hours * hourlyAmount"/>
-                    <set field="currencyUomId" from="rateAmount.rateCurrencyUomId"/>
+                        <set field="rateAmountId" from="ratePurposeEnumId == 'RaprVendor' ? getTerOut.vendorRateAmountId : getTerOut.rateAmountId"/>
+                        <entity-find-one entity-name="mantle.humanres.rate.RateAmount" value-field="rateAmount" cache="true">
+                            <field-map field-name="rateAmountId"/></entity-find-one>
+                    </else></if>
+                    <if condition="rateAmount"><then>
+                        <set field="hourlyAmount" from="rateAmount.rateAmount"/>
+                        <set field="hourlyAmountTotal" from="hours * hourlyAmount"/>
+                        <set field="currencyUomId" from="rateAmount.rateCurrencyUomId"/>
+                    </then><else>
+                        <set field="purposeDesc" from="ec.entity.find('enums').condition('enumId', ratePurposeEnumId).one()?.description"/>
+                        <message error="true">No hourly ${purposeDesc} rate amount found for time entry ${timeEntryId}</message>
+                    </else></if>
                 </then><else>
-                    <set field="purposeDesc" from="ec.entity.find('enums').condition('enumId', ratePurposeEnumId).one()?.description"/>
-                    <message error="true">No hourly ${purposeDesc} rate amount found for time entry ${timeEntryId}</message>
+                    <set field="hourlyAmountTotal" from="hours * hourlyAmount"/>
                 </else></if>
             </then><else>
                 <set field="hourlyAmount" from="0.0"/>
                 <set field="hourlyAmountTotal" from="0.0"/>
             </else></if>
             <if condition="pieceCount"><then>
-                <set field="pieceRateAmountId" from="ratePurposeEnumId == 'RaprVendor' ? timeEntry.vendorPieceRateAmountId : timeEntry.pieceRateAmountId"/>
-                <if condition="pieceRateAmountId"><then>
-                    <entity-find-one entity-name="mantle.humanres.rate.RateAmount" value-field="rateAmount" cache="true">
-                        <field-map field-name="rateAmountId" from="pieceRateAmountId"/></entity-find-one>
-                </then><else>
-                    <service-call name="mantle.work.TimeServices.get#TimeEntryRate" out-map="getTerOut" in-map="[timeEntryId:timeEntryId]"/>
-                    <!-- set the values in the timeEntry record for use below since the service updates the DB record and we don't want to re-query to get it -->
-                    <set field="timeEntry.pieceRateAmountId" from="getTerOut.pieceRateAmountId"/>
-                    <set field="timeEntry.vendorPieceRateAmountId" from="getTerOut.vendorPieceRateAmountId"/>
+                <set field="pieceAmount" from="ratePurposeEnumId == 'RaprVendor' ? timeEntry.vendorPieceRate : timeEntry.clientPieceRate"/>
+                <if condition="pieceAmount == null"><then>
+                    <set field="pieceRateAmountId" from="ratePurposeEnumId == 'RaprVendor' ? timeEntry.vendorPieceRateAmountId : timeEntry.pieceRateAmountId"/>
+                    <if condition="pieceRateAmountId"><then>
+                        <entity-find-one entity-name="mantle.humanres.rate.RateAmount" value-field="rateAmount" cache="true">
+                            <field-map field-name="rateAmountId" from="pieceRateAmountId"/></entity-find-one>
+                    </then><else>
+                        <service-call name="mantle.work.TimeServices.get#TimeEntryRate" out-map="getTerOut" in-map="[timeEntryId:timeEntryId]"/>
+                        <!-- set the values in the timeEntry record for use below since the service updates the DB record and we don't want to re-query to get it -->
+                        <set field="timeEntry.pieceRateAmountId" from="getTerOut.pieceRateAmountId"/>
+                        <set field="timeEntry.vendorPieceRateAmountId" from="getTerOut.vendorPieceRateAmountId"/>
 
-                    <set field="pieceRateAmountId" from="ratePurposeEnumId == 'RaprVendor' ? getTerOut.vendorPieceRateAmountId : getTerOut.pieceRateAmountId"/>
-                    <entity-find-one entity-name="mantle.humanres.rate.RateAmount" value-field="pieceRateAmount" cache="true">
-                        <field-map field-name="rateAmountId" from="pieceRateAmountId"/></entity-find-one>
-                </else></if>
-                <if condition="pieceRateAmount"><then>
-                    <set field="pieceAmount" from="pieceRateAmount.rateAmount"/>
-                    <set field="pieceAmountTotal" from="pieceCount * pieceAmount"/>
-                    <set field="currencyUomId" from="rateAmount.rateCurrencyUomId"/>
+                        <set field="pieceRateAmountId" from="ratePurposeEnumId == 'RaprVendor' ? getTerOut.vendorPieceRateAmountId : getTerOut.pieceRateAmountId"/>
+                        <entity-find-one entity-name="mantle.humanres.rate.RateAmount" value-field="pieceRateAmount" cache="true">
+                            <field-map field-name="rateAmountId" from="pieceRateAmountId"/></entity-find-one>
+                    </else></if>
+                    <if condition="pieceRateAmount"><then>
+                        <set field="pieceAmount" from="pieceRateAmount.rateAmount"/>
+                        <set field="pieceAmountTotal" from="pieceCount * pieceAmount"/>
+                        <set field="currencyUomId" from="rateAmount.rateCurrencyUomId"/>
+                    </then><else>
+                        <set field="purposeDesc" from="ec.entity.find('enums').condition('enumId', ratePurposeEnumId).one()?.description"/>
+                        <message>No piece rate ${purposeDesc} amount found for time entry ${timeEntryId}</message>
+                    </else></if>
                 </then><else>
-                    <set field="purposeDesc" from="ec.entity.find('enums').condition('enumId', ratePurposeEnumId).one()?.description"/>
-                    <message>No piece rate ${purposeDesc} amount found for time entry ${timeEntryId}</message>
+                    <set field="pieceAmountTotal" from="pieceCount * pieceAmount"/>
                 </else></if>
             </then><else>
                 <set field="pieceAmount" from="0.0"/>
@@ -444,7 +464,7 @@ along with this software (see the LICENSE.md file). If not, see
         </actions>
     </service>
     <service verb="get" noun="TimeEntryRate">
-        <description>Find the RateAmount records for a TimeEntry. Rate amounts can be calculated from these.</description>
+        <description>Find the RateAmount records for a TimeEntry and if not set already then set TimeEntry hour and piece rates from these.</description>
         <in-parameters>
             <parameter name="timeEntryId" required="true"/>
             <!-- TODO: where to get currency... project setting? client or internal org setting? -->
@@ -477,6 +497,7 @@ along with this software (see the LICENSE.md file). If not, see
                             rateTypeEnumId:timeEntry.rateTypeEnumId, rateCurrencyUomId:rateCurrencyUomId]"/>
                 <if condition="clientRate.rateAmountId">
                     <set field="timeEntry.rateAmountId" from="clientRate.rateAmountId"/>
+                    <if condition="timeEntry.hasModifiedRates != 'Y'"><set field="timeEntry.clientHourRate" from="clientRate.rateAmount"/></if>
                     <set field="rateAmountId" from="clientRate.rateAmountId"/>
                     <set field="rateAmount" from="clientRate.rateAmount"/>
                 </if>
@@ -490,6 +511,7 @@ along with this software (see the LICENSE.md file). If not, see
                             rateTypeEnumId:timeEntry.rateTypeEnumId, rateCurrencyUomId:rateCurrencyUomId]"/>
                 <if condition="vendorRate.rateAmountId">
                     <set field="timeEntry.vendorRateAmountId" from="vendorRate.rateAmountId"/>
+                    <if condition="timeEntry.hasModifiedRates != 'Y'"><set field="timeEntry.vendorHourRate" from="vendorRate.rateAmount"/></if>
                     <set field="vendorRateAmountId" from="vendorRate.rateAmountId"/>
                     <set field="vendorRateAmount" from="vendorRate.rateAmount"/>
                 </if>
@@ -504,6 +526,7 @@ along with this software (see the LICENSE.md file). If not, see
                             rateTypeEnumId:timeEntry.pieceRateTypeEnumId, rateCurrencyUomId:rateCurrencyUomId]"/>
                 <if condition="pieceRate.rateAmountId">
                     <set field="timeEntry.pieceRateAmountId" from="pieceRate.rateAmountId"/>
+                    <if condition="timeEntry.hasModifiedRates != 'Y'"><set field="timeEntry.clientPieceRate" from="pieceRate.rateAmount"/></if>
                     <set field="pieceRateAmountId" from="pieceRate.rateAmountId"/>
                     <set field="pieceRateAmount" from="pieceRate.rateAmount"/>
                 </if>
@@ -517,6 +540,7 @@ along with this software (see the LICENSE.md file). If not, see
                             rateTypeEnumId:timeEntry.pieceRateTypeEnumId, rateCurrencyUomId:rateCurrencyUomId]"/>
                 <if condition="vendorPieceRate.rateAmountId">
                     <set field="timeEntry.vendorPieceRateAmountId" from="vendorPieceRate.rateAmountId"/>
+                    <if condition="timeEntry.hasModifiedRates != 'Y'"><set field="timeEntry.vendorPieceRate" from="vendorPieceRate.rateAmount"/></if>
                     <set field="vendorPieceRateAmountId" from="vendorPieceRate.rateAmountId"/>
                     <set field="vendorPieceRateAmount" from="vendorPieceRate.rateAmount"/>
                 </if>
