@@ -13,6 +13,8 @@ New Features
 - GL Account posted summary values on GlAccountOrganization and
   GlAccountOrgTimePeriod are no longer set on the fly by default and are
   instead populated by a scheduled job (recalculate#GlAccountOrgSummaries)
+- RateAmount records may now be changed in place with looked up rate saved
+  on TimeEntry and user changeable with permission
 
 Bug Fixes
 
